# polar

./: CLAUDE.md
.github/workflows/: release_cli.yaml  test_cli.yaml
cli/: pyproject.toml
cli/src/polar_cli/: app.py  errors.py  output.py  utils.py
cli/src/polar_cli/commands/: benefits.py  checkouts.py  custom_fields.py  customers.py  discounts.py  events.py  files.py  license_keys.py  meters.py  org.py  products.py  webhooks.py
cli/tests/: conftest.py  test_app.py  test_errors.py
cli/tests/commands/: test_new_resources.py  test_org.py  test_special_ops.py
