[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polar-cli"
version = "0.1.0"
description = "CLI for Polar — manage products, customers, and webhooks from the terminal"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "polar-sdk>=0.27.3",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
polar = "polar_cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polar_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
